--- a/eminent-escape/src/components/Description.astro
+++ b/eminent-escape/src/components/Description.astro
@@ -4,10 +4,10 @@
 <div class="mb-4 ml-4 mr-4">
     <h2 class="mb-2 text-center text-primary font-semibold text-2xl lg:text-6xl md:text-4xl">Descripción</h2>
     <p class="text-center text-secundary lg:text-2xl">
-        Soy una persona apasionada por la tecnología, con un fuerte interés en el aprendizaje continuo
-        y la adopción de nuevas tendencias de desarrollo. Estoy siempre al tanto de las noticias del
-        mundo de la programación. Me caracterizo por ser analítico y detallista, lo que me permite
-        entregar soluciones de alta calidad.  Además, me considero alguien noble, que valora el
-        trabajo en equipo.
+        Cuento con más de 4 años de experiencia profesional en el desarrollo de software utilizando Java y bases de datos
+        relacionales con SQL. Me destaco no solo por mis habilidades técnicas, sino también por mis valores personales:
+        honestidad, transparencia, nobleza, perfeccionador, pensamiento analítico y un enfoque proactivo para la resolución
+        de problemas. Soy una persona comprometida con el aprendizaje continuo, apasionado por la programación y atento a
+        las nuevas tendencias tecnológicas.
     </p>
 </div>
