--- a/eminent-escape/src/pages/index.astro
+++ b/eminent-escape/src/pages/index.astro
@@ -13,7 +13,7 @@ const information = [
 	{
 		image: 'assets/logo_Inbursa.png',
 		imageTitle: 'Inbursa',
-		description: 'Participación activa en el desarrollo y mantenimiento de microservicios utilizando Java, Spring Boot y PL/SQL. Colaboración constante dentro de un equipo ágil bajo la metodología Scrum, resolución eficiente de incidencias en producción. Uso de Git y Jira para el control de versiones y gestión colaborativa del código.',
+		description: 'Desarrollo y mantenimiento de microservicios con Java, Spring Boot y PL/SQL para la exposición de APIs REST. Resolución de incidencias en producción de tickets gestionados con Jira. Trabajo en equipos ágiles bajo la metodología Scrum. Uso de Git para control de versiones y coordinación entre los miembros del equipo. Escritura de código limpio y escalable bajo las normas propuestas por la empresa supervisados con SonarQube. Mantenimiento de proyectos con Spring JMS para el envió de notificaciones a los clientes mediante colas. Optimización de procedimientos almacenados y consultas en base de datos Oracle utilizando PL/SQL.',
 		tecnologies: [
 			{
 				name: 'Años',
