--- a/eminent-escape/src/components/BasicCard.astro
+++ b/eminent-escape/src/components/BasicCard.astro
@@ -8,9 +8,31 @@ const { title, image } = Astro.props;
         <h1 class="text-primary p-4 font-semibold text-xl h-16 text-center">{ title }</h1>
         <img src={image} alt="Imagen de bienvenida" class="block mx-auto w-72"/>
         <div class="flex justify-evenly">
-            <a href="https://www.linkedin.com/in/luis-marquez-168080177/" target="_blank"><img src="assets/linkedin.svg" alt="Linkedin" class="w-14 mr-2 ml-2 mt-4 mb-4"/></a>
-            <a href="https://github.com/AlgorithmHappy" target="_blank"><img src="assets/github.svg" alt="GitHub" class="w-14 mr-2 ml-2 mt-4 mb-4"/></a>
-            <a href="https://www.facebook.com/luisgerardo.marquezmendez/" target="_blank"><img src="assets/facebook.svg" alt="FaceBook" class="w-14 mr-2 ml-2 mt-4 mb-4"/></a>
+            <a href="https://www.linkedin.com/in/luis-marquez-168080177/" target="_blank">
+                <div class="w-14 h-14 flex items-center justify-center p-1">
+                    <img src="assets/linkedin.svg" alt="Linkedin" class="w-full h-full rounded-2xl" />
+                </div>
+            </a>
+            <a href="https://github.com/AlgorithmHappy" target="_blank">
+                <div class="w-14 h-14 flex items-center justify-center p-1">
+                    <img src="assets/github.svg" alt="GitHub" class="w-full h-full rounded-2xl" />
+                </div>
+            </a>
+            <a href="https://x.com/lgerardomarquez" target="_blank">
+                <div class="w-14 h-14 flex items-center justify-center p-1">
+                    <img src="assets/x.svg" alt="X" class="w-full h-full rounded-2xl" />
+                </div>
+            </a>
+            <a href="https://www.facebook.com/people/Gerardo-Marquez-Dev/61578969874237" target="_blank">
+                <div class="w-14 h-14 flex items-center justify-center p-1">
+                    <img src="assets/facebook.svg" alt="Facebook" class="w-full h-full rounded-2xl" />
+                </div>
+            </a>
+            <a href="https://www.instagram.com/gerardomarquezdev" target="_blank">
+                <div class="w-14 h-14 flex items-center justify-center p-1">
+                    <img src="assets/instagram.svg" alt="Instagram" class="w-full h-full rounded-2xl" />
+                </div>
+            </a>
         </div>
     </div>
 </div>
@@ -23,14 +45,30 @@ const { title, image } = Astro.props;
         <div>
             <h1 class="text-primary text-center font-semibold text-4xl mb-16 lg:text-6xl">{ title }</h1>
             <div class="flex justify-evenly">
-                <a href="https://www.linkedin.com/in/luis-marquez-168080177/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/linkedin.svg" alt="Linkedin" class="w-14 lg:w-24"/>
+                <a href="https://www.linkedin.com/in/luis-marquez-168080177/" target="_blank">
+                    <div class="w-16 h-16 flex items-center justify-center p-1">
+                        <img src="assets/linkedin.svg" alt="Linkedin" class="w-full h-full rounded-2xl" />
+                    </div>
                 </a>
-                <a href="https://github.com/AlgorithmHappy" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/github.svg" alt="GitHub" class="w-14 lg:w-24"/>
+                <a href="https://github.com/AlgorithmHappy" target="_blank">
+                    <div class="w-16 h-16 flex items-center justify-center p-1">
+                        <img src="assets/github.svg" alt="GitHub" class="w-full h-full rounded-2xl" />
+                    </div>
                 </a>
-                <a href="https://www.facebook.com/luisgerardo.marquezmendez/" target="_blank" rel="noopener noreferrer">
-                    <img src="assets/facebook.svg" alt="FaceBook" class="w-14 lg:w-24"/>
+                <a href="https://x.com/lgerardomarquez" target="_blank">
+                    <div class="w-16 h-16 flex items-center justify-center p-1">
+                        <img src="assets/x.svg" alt="X" class="w-full h-full rounded-2xl" />
+                    </div>
+                </a>
+                <a href="https://www.facebook.com/people/Gerardo-Marquez-Dev/61578969874237" target="_blank">
+                    <div class="w-16 h-16 flex items-center justify-center p-1">
+                        <img src="assets/facebook.svg" alt="Facebook" class="w-full h-full rounded-2xl" />
+                    </div>
+                </a>
+                <a href="https://www.instagram.com/gerardomarquezdev" target="_blank">
+                    <div class="w-16 h-16 flex items-center justify-center p-1">
+                        <img src="assets/instagram.svg" alt="Instagram" class="w-full h-full rounded-2xl" />
+                    </div>
                 </a>
             </div>
         </div>
