--- a/eminent-escape/src/components/Footer.astro
+++ b/eminent-escape/src/components/Footer.astro
@@ -23,7 +23,9 @@
             <div class="flex flex-wrap items-center gap-4 w-full">
                 <a href="https://www.linkedin.com/in/luis-marquez-168080177/" target="_blank"><img class="w-8 h-8 object-contain" src="/assets/linkedin.svg" alt="LinkedIn"/></a>
                 <a href="https://github.com/AlgorithmHappy" target="_blank"><img class="w-8 h-8 object-contain" src="/assets/github.svg" alt="GitHub"/></a>
-                <a href="https://www.facebook.com/luisgerardo.marquezmendez/" target="_blank"><img class="w-8 h-8 object-contain" src="/assets/facebook.svg" alt="FaceBook"/></a>
+                <a href="https://x.com/lgerardomarquez" target="_blank"><img class="w-8 h-8 object-contain" src="/assets/x.svg" alt="X"/></a>
+                <a href="https://www.facebook.com/people/Gerardo-Marquez-Dev/61578969874237" target="_blank"><img class="w-8 h-8 object-contain" src="/assets/facebook.svg" alt="FaceBook"/></a>
+                <a href="https://www.instagram.com/gerardomarquezdev" target="_blank"><img class="w-8 h-8 object-contain" src="/assets/instagram.svg" alt="Instagram"/></a>
             </div>
         </div>
     </div>
