Se agregan mas entradas al blog y se arregla la descripcion de google

--- a/eminent-escape/src/layouts/Layout.astro
+++ b/eminent-escape/src/layouts/Layout.astro
@@ -14,6 +14,8 @@ inject();
 		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="description" content="Soy Luis Gerardo, programador apasionado por la tecnología. En esta página comparto contenido sobre desarrollo de software, consejos de programación, proyectos personales y tips para mejorar como dev.
+🚀 Si te gusta la programacion esta pagina es para ti" />
 		<title>gerardomarquez.dev</title>
 	</head>
 	<body class="">
