--- a/eminent-escape/src/pages/blog/index.astro
+++ b/eminent-escape/src/pages/blog/index.astro
@@ -21,7 +21,21 @@ const blogs : BlogCardProps[] = [
         information: 'En este capítulo aprenderás qué es SQL y cómo usar el comando SELECT para hacer consultas básicas en una base de datos. También se explican los conceptos clave del DML, con ejemplos y ejercicios para practicar.',
         link: 'blog/posts/Que_es_SQL_y_DML_Estructura_de_una_consulta_con_Select',
         imageSrc: 'assets/Que es SQL y DML Estructura de una consulta con Select.webp',
-        imageAlt: 'Imagen del artículo sobre cómo crear un portafolio'
+        imageAlt: 'Imagen del artículo sobre "¿Que es SQL y DML?. Estructura de una consulta con "Select""'
+    },
+    {
+        title: 'Filtra datos con la cláusula "Where"',
+        information: 'Este artículo explica de forma clara y práctica cómo usar la cláusula WHERE en SQL para filtrar datos según condiciones específicas. Aprenderás a utilizar operadores de comparación con números y textos.',
+        link: 'blog/posts/Filtra_datos_con_la_clausula_Where',
+        imageSrc: 'assets/Filtra datos con la cláusula Where.webp',
+        imageAlt: 'Imagen del artículo sobre "Filtra datos con la clausula Where"'
+    },
+    {
+        title: 'Filtrado complejo con operaciones lógicas: AND, OR y NOT',
+        information: 'El filtrado complejo en SQL se logra combinando condiciones en la cláusula WHERE mediante operadores lógicos: AND, OR y NOT. Estos filtros permiten realizar búsquedas precisas y adaptadas a múltiples criterios.',
+        link: 'blog/posts/Filtrado_complejo_con_operaciones_logicas_AND_OR_y_NOT',
+        imageSrc: 'assets/Filtrado complejo con operaciones lógicas AND, OR y NOT.webp',
+        imageAlt: 'Imagen del artículo sobre "Filtrado complejo con operaciones lógicas AND, OR y NOT"'
     }
 ];
 
