Se agrega Youtube

--- a/eminent-escape/src/components/Footer.astro
+++ b/eminent-escape/src/components/Footer.astro
@@ -26,6 +26,7 @@
                 <a href="https://x.com/lgerardomarquez" target="_blank"><img class="w-8 h-8 object-contain" src="/assets/x.svg" alt="X"/></a>
                 <a href="https://www.facebook.com/people/Gerardo-Marquez-Dev/61578969874237" target="_blank"><img class="w-8 h-8 object-contain" src="/assets/facebook.svg" alt="FaceBook"/></a>
                 <a href="https://www.instagram.com/gerardomarquezdev" target="_blank"><img class="w-8 h-8 object-contain" src="/assets/instagram.svg" alt="Instagram"/></a>
+                <a href="https://www.youtube.com/@LGerardoMarquez" target="_blank"><img class="w-8 h-8 object-contain" src="/assets/youtube.svg" alt="Youtube"/></a>
             </div>
         </div>
     </div>
