--- a/eminent-escape/src/components/BasicCard.astro
+++ b/eminent-escape/src/components/BasicCard.astro
@@ -9,28 +9,33 @@ const { title, image } = Astro.props;
         <img src={image} alt="Imagen de bienvenida" class="block mx-auto w-72"/>
         <div class="flex justify-evenly">
             <a href="https://www.linkedin.com/in/luis-marquez-168080177/" target="_blank">
-                <div class="w-14 h-14 flex items-center justify-center p-1">
+                <div class="w-12 h-12 flex items-center justify-center p-1">
                     <img src="assets/linkedin.svg" alt="Linkedin" class="w-full h-full rounded-2xl" />
                 </div>
             </a>
             <a href="https://github.com/AlgorithmHappy" target="_blank">
-                <div class="w-14 h-14 flex items-center justify-center p-1">
+                <div class="w-12 h-12 flex items-center justify-center p-1">
                     <img src="assets/github.svg" alt="GitHub" class="w-full h-full rounded-2xl" />
                 </div>
             </a>
             <a href="https://x.com/lgerardomarquez" target="_blank">
-                <div class="w-14 h-14 flex items-center justify-center p-1">
+                <div class="w-12 h-12 flex items-center justify-center p-1">
                     <img src="assets/x.svg" alt="X" class="w-full h-full rounded-2xl" />
                 </div>
             </a>
             <a href="https://www.facebook.com/people/Gerardo-Marquez-Dev/61578969874237" target="_blank">
-                <div class="w-14 h-14 flex items-center justify-center p-1">
+                <div class="w-12 h-12 flex items-center justify-center p-1">
                     <img src="assets/facebook.svg" alt="Facebook" class="w-full h-full rounded-2xl" />
                 </div>
             </a>
             <a href="https://www.instagram.com/gerardomarquezdev" target="_blank">
-                <div class="w-14 h-14 flex items-center justify-center p-1">
+                <div class="w-12 h-12 flex items-center justify-center p-1">
                     <img src="assets/instagram.svg" alt="Instagram" class="w-full h-full rounded-2xl" />
+                </div>
+            </a>
+            <a href="https://www.youtube.com/@LGerardoMarquez" target="_blank">
+                <div class="w-12 h-12 flex items-center justify-center p-1">
+                    <img src="assets/youtube.svg" alt="Youtube" class="w-full h-full rounded-2xl" />
                 </div>
             </a>
         </div>
@@ -68,6 +73,11 @@ const { title, image } = Astro.props;
                 <a href="https://www.instagram.com/gerardomarquezdev" target="_blank">
                     <div class="w-16 h-16 flex items-center justify-center p-1">
                         <img src="assets/instagram.svg" alt="Instagram" class="w-full h-full rounded-2xl" />
+                    </div>
+                </a>
+                <a href="https://www.youtube.com/@LGerardoMarquez" target="_blank">
+                    <div class="w-16 h-16 flex items-center justify-center p-1">
+                        <img src="assets/youtube.svg" alt="Youtube" class="w-full h-full rounded-2xl" />
                     </div>
                 </a>
             </div>
