--- a/eminent-escape/src/pages/blog/index.astro
+++ b/eminent-escape/src/pages/blog/index.astro
@@ -17,6 +17,13 @@ interface BlogCardProps {
 }
 const blogs : BlogCardProps[] = [
     {
+        title: 'Curso de SQL SELECT Facil y Rapido',
+        information: 'Curso de SQL SELECT Fácil y Rápido: Aprende a consultar bases de datos de manera clara y práctica usando SELECT. Desde los fundamentos hasta filtros avanzados con WHERE.',
+        link: 'blog/posts/Curso_de_SQL_SELECT_Facil_y_Rapido',
+        imageSrc: 'assets/Curso de SQL SELECT Facil y Rapido.webp',
+        imageAlt: 'Imagen del artículo sobre "Curso de SQL SELECT Facil y Rapido"'
+    },
+    {
         title: '¿Que es SQL y DML?. Estructura de una consulta con "Select"',
         information: 'En este capítulo aprenderás qué es SQL y cómo usar el comando SELECT para hacer consultas básicas en una base de datos. También se explican los conceptos clave del DML, con ejemplos y ejercicios para practicar.',
         link: 'blog/posts/Que_es_SQL_y_DML_Estructura_de_una_consulta_con_Select',
@@ -36,6 +43,13 @@ const blogs : BlogCardProps[] = [
         link: 'blog/posts/Filtrado_complejo_con_operaciones_logicas_AND_OR_y_NOT',
         imageSrc: 'assets/Filtrado complejo con operaciones lógicas AND, OR y NOT.webp',
         imageAlt: 'Imagen del artículo sobre "Filtrado complejo con operaciones lógicas AND, OR y NOT"'
+    },
+    {
+        title: 'Filtrado de datos con el operador LIKE',
+        information: 'Aprende a filtrar datos de texto en SQL de forma flexible con el operador LIKE. Descubre cómo usar sus comodines (% y _) para buscar patrones en cadenas, escapar caracteres especiales y crear consultas más precisas.',
+        link: 'blog/posts/Filtrado_de_datos_con_el_operador_LIKE',
+        imageSrc: 'assets/Filtrado de datos con el operador LIKE.webp',
+        imageAlt: 'Imagen del artículo sobre "Filtrado de datos con el operador LIKE.webp"'
     }
 ];
 
